--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1 class="text-white font-mono"><a href="https://github.com/stoptexting/excel-poll-fill">excel-poll-fill (python, 2022)</a></h1>
             <h1 class="text-white font-mono"><a href="https://github.com/stoptexting/solidity-sc">smart contract (solidity, 2022)</a></h1>
             <h1 class="text-white font-mono"><a href="https://github.com/ElPodium/CityGuess">cityguess game (web dev, 2022)</a></h1><br>
-            <h1 class="text-white font-mono"><a id="go_back" href="page">return to the menu above</a></h1>
+            <h1 class="text-white font-mono"><a id="go_back" href="#page">return to the menu above</a></h1>
         </div>
 
     </body>
